fixed dark mode for manager reports

--- a/my-react-app/src/components/ManageAccessPage/ManageAccess.css
+++ b/my-react-app/src/components/ManageAccessPage/ManageAccess.css
@@ -43,7 +43,7 @@
 
 /* Handle */
 ::-webkit-scrollbar-thumb {
-    background: rgb(68, 68, 68);
+    background: rgb(128, 128, 128);
     border-radius: 10px;
 }
 
@@ -76,23 +76,21 @@
     height: 631px;
     width: 100%;
     padding-bottom: 150px;
-    color: white !important;
 }
 
 .sidebar-style{
     background-color: rgb(223, 223, 223);
     color: black;
-    height: 90vh;
+    height: 781px;
     margin: 0;
     padding: 0;
 }
 .sidebar-style-dark{
-    background-color: black;
+    background-color: rgb(32, 32, 32);
     color: white;
-    height: 90vh;
+    height: 802px;
     margin: 0;
     padding: 0;
-    padding-bottom: 200px;
 }
 
 .form {
