--- a/my-react-app/src/components/commons/Header/Header.css
+++ b/my-react-app/src/components/commons/Header/Header.css
@@ -150,13 +150,3 @@
   margin-right: 20px;
   cursor: pointer;
 }
-
-.MuiMenuItem-active {
-  color: black;
-  background-color: red;
-}
-
-.menu-dark {
-  color: white;
-  background-color: #282c34;
-}
